<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_settings">Settings</string>

    <string name="app_name">Pollo</string>
    <string name="sign_in">Sign in with Cornell SSO</string>

    <string name="close_detail_menu_content_description">Close Detail Menu</string>

    <string name="created">Created</string>

    <string name="join_group_hint">Enter a code…</string>
    <string name="create_group_hint">Enter a new group name…</string>

    <string name="go_back_content_description">Go Back</string>

    <string name="group_details_button_content_description">Group Details Button</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="join_button_text">Join</string>
    <string name="create_button_text">Create</string>

    <string name="joined">Joined</string>

    <string name="live_indicator">•</string>

<!--Home Screen Edit Group Strings-->
    <string name="leave_group_content_description">Leave Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="edit_group_name">Edit Name</string>
    <string name="save_group_name">Save</string>

<!--Home Screen Empty State Strings-->
    <string name="no_groups_joined_emoji">&#129335;&#8205;&#9792;&#65039;</string>
    <string name="no_groups_created_emoji">&#129335;&#8205;&#9794;&#65039;</string>
    <string name="no_groups_joined_title">No groups joined</string>
    <string name="no_groups_created_title">No groups created</string>
    <string name="no_groups_joined_subtext">Enter a code below to join a group!</string>
    <string name="no_groups_created_subtext">Tap \"+\" above to create a group!</string>

<!--Group Screen Strings-->
    <string name="no_polls_emoji">&#128584;</string>
    <string name="no_polls_title">Nothing to see yet</string>
    <string name="no_polls_created_title">Nothing to see here</string>
    <string name="no_polls_subtext">Waiting for the admin to post a poll…</string>
    <string name="no_polls_created_subtext">You haven’t made any polls yet! Tap “+” above to try it out.</string>
    <string name="view_all">View All</string>
    <string name="export">Export</string>

    <string name="pollo">Pollo</string>
    <string name="pollo_pronunciation">\'\'Poh-loh\'\'</string>

<!--Settings Screen Strings-->
    <string name="user_email">%1$s@cornell.edu</string>
    <string name="settings_about">Pollo is made by Cornell AppDev, an engineering project team at Cornell University.</string>
    <string name="settings_icon">⚙</string>
    <string name="settings_more">Let us know if you have any ideas, suggestions, or issues! Shake your phone to access the feedback form, or follow the link below.</string>

    <string name="title_activity_settings">Settings</string>

    <string name="view_polls_for_date_content_description">View Polls For Date</string>

    <string name="welcome_to_text">Welcome to</string>

    <!-- Create Poll Fragment -->
    <string name="add_option">  Add Option</string>
    <string name="ask_question">Ask a question…</string>
    <string name="create_question">Create Question</string>
    <string name="delete_poll">Delete Poll</string>
    <string name="drafts">Drafts</string>
    <string name="untitled_poll">Untitled Poll</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="start_poll">Start Question</string>

    <!-- Poll Options -->
    <string name="delete">Delete</string>

    <!-- Polls Recycler Adapter -->
    <string name="poll_live">Poll Live</string>
    <string name="poll_closed">Poll Closed</string>
    <string name="end_poll">End Poll</string>
    <string name="default_timer_text">00:00</string>
    <string name="share_results">Share Results</string>
    <string name="admin_results_not_shared">Only you can see results</string>
    <string name="results_shared">Results Shared</string>
    <string name="admin_results_shared">Shared with group</string>
    <string name="view_poll_options_content_description">View Poll Options</string>

    <!-- Create Poll Onboarding Messages -->
    <string name="welcome">Welcome to your first poll!</string>
    <string name="tips">Here are some tips to get you started.</string>
    <string name="tap_anywhere">Tap anywhere to continue</string>
    <string name="customize">To customize this question, type here and add additional options</string>
    <string name="autofill">To autofill choices A, B, … , tap here to start live polling</string>
    <string name="quiz_mode">To use quiz mode, select a right answer</string>
    <string name="save_draft">To come back to this question later, tap here</string>
    <string name="ready">That\'s it! You\'re good to go.</string>
    <string name="start_question">To start polling now, tap here</string>
</resources>
