<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_login_background"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_login_subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-16dp"
            android:gravity="center_horizontal"
            android:padding="0dp"
            android:text="@string/welcome_to_text"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="0dp"
            android:text="@string/pollo"
            android:textColor="@color/white"
            android:textSize="58sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_login_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/pollo_pronunciation"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/sso_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/actualWhite"
            android:letterSpacing="0.01"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/loginGray"
            android:drawablePadding="7dp" />

    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>