<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cornellappdev.android.pollo.MainActivity$PlaceholderFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/noGroupsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/noGroupsEmoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_groups_joined_emoji"
                android:height="50dp"
                android:background="@color/white"
                android:width="50dp"
                android:textSize="38sp"/>

            <TextView
                android:id="@+id/noGroupsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_groups_joined_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noGroupsSubtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".9"
                android:text="@string/no_groups_joined_subtext" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/group_list_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.google.samples.apps.sunflower.GardenActivity"
            tools:listitem="@layout/group_list_item">

        </androidx.recyclerview.widget.RecyclerView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>