<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".PollsDateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
        <LinearLayout
            android:background="@color/black"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:background="@color/black"
                android:layout_height="65dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:background="@color/black"
                    android:contentDescription="@string/go_back_content_description"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_height="32dp"
                    android:layout_marginStart="15dp"
                    android:layout_width="32dp"
                    android:onClick="goBack"
                    android:src="@drawable/arrow_back" />

                <TextView
                    android:id="@+id/groupNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:fontFamily="sans-serif"
                    android:text="Example Course"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/codeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_below="@id/groupNameTextView"
                    android:alpha="0.75"
                    android:fontFamily="sans-serif-medium"
                    android:text="Code: 123ABC"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

                <ImageButton
                    android:id="@+id/newPollImageButton"
                    android:background="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_height="32dp"
                    android:layout_width="32dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/plus_sign_white" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/noPollsView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_polls_emoji"
                    android:textSize="38sp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:id="@+id/noPollsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_polls_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/noPollsSubtext"
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_polls_subtext"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="@color/cool_grey"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pollsDateRecyclerView"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:scrollbars="vertical" />

            <LinearLayout
                android:id="@+id/adminFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/viewAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    android:textColor="@color/polloGreen"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:background="@color/black"
                    android:layout_marginBottom="24dp" />

                <Button
                    android:id="@+id/exportButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/export"
                    android:textColor="@color/cool_grey"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_export_button" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>