<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pollsRecyclerViewCell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_poll_cell"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/questionHeaderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_poll_header"
            app:layout_constraintBottom_toTopOf="@id/pollsChoiceRecyclerView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/questionMCTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:letterSpacing="0.03"
                android:text="Favorite Ice Cream \n Favorite Ice Cream \n Favorite Ice Cream"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="13sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:id="@+id/resultsSharedLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/questionHeaderView"
                app:layout_constraintTop_toBottomOf="@id/questionMCTextView">

                <ImageView
                    android:id="@+id/resultsSharedIcon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/results_not_shared" />

                <TextView
                    android:id="@+id/resultsSharedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Only you can see results"
                    android:textAlignment="center"
                    android:textColor="@color/settings_detail"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <TextView
                android:id="@+id/questionMCSubtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="Final Results  •  1 Vote"
                android:textAlignment="center"
                android:textColor="@color/settings_detail"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/questionMCTextView"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/adminResponsesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="10 Responses"
                android:textAlignment="center"
                android:textColor="@color/settings_detail"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/questionHeaderView"
                app:layout_constraintTop_toBottomOf="@id/questionMCTextView"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/pollOptionsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/view_poll_options_content_description"
                android:src="@drawable/more_dots"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/headerDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="@color/settings_divider"
                app:layout_constraintTop_toBottomOf="@+id/questionMCTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/questionFRHeaderView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/rounded_poll_header"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/questionFRTextView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="1dp"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.03"
                android:maxLines="3"
                android:text="Favorite Ice Cream \n Favorite Ice Cream \n Favorite Ice Cream"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-medium"
                android:hint="Type a response"
                android:inputType="text"
                android:letterSpacing="0.02"
                android:textColor="#c4c3c9"
                android:textSize="16sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/questionFRTextView"
                tools:ignore="HardcodedText,LabelFor" />

            <TextView
                android:id="@+id/questionFRSubtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="Final Results  •  1 Vote"
                android:textAlignment="center"
                android:textColor="@color/settings_detail"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/questionFRTextView"
                tools:ignore="HardcodedText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/settings_divider"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pollsChoiceRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/actualWhite"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionHeaderView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/adminPollControlsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pollsRecyclerViewCell">

        <Button
            android:id="@+id/end_poll_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_container_outline"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/end_poll"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHighlight="@color/black"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/poll_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:includeFontPadding="false"
            android:text="@string/default_timer_text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/end_poll_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
